# PHASE_1/API_SourceCode/static/swagger.json
@@ -72,7 +72,7 @@
                         "in": "query",
                         "description": "Key Terms to search on. [Supports multi-terms]. (coronavirus, pandemic)",
                         "required": false,
-                        "type": "string",
+                        "type": "array[string]",
                     },
                     {
                         "name": "limit",
@@ -108,7 +108,13 @@
                                             }
                                         ]
                                     }
-                                ]
+                                ],
+                                "log": {
+                                    "provider_name": "API-demic",
+                                    "accessed_time": "string",
+                                    "amount_of_articles": "string",
+                                    "response_time": "string"
+                                }
                             }
 
                         }
@@ -135,7 +141,203 @@
                     }
                 }
             },
-        }
+        },
+
+        "/articles/latest": {
+            "get": {
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Find the latest articles on certain topics",
+                "description": "Get the latest articles on a general topic, or just the latest articles if no parameters are given",
+                "operationId": "",
+                "consumes": [
+                    "application/json",
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "on",
+                        "in": "query",
+                        "description": "search key to found latest article \"on\" (pandemic,zika)",
+                        "required": false,
+                        "type": "array[string]",
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "examples": {
+                            "application/json":
+                            {
+                                "articles": [
+                                    {
+                                        "url": "string",
+                                        "date_of_publication": "string",
+                                        "header": "string",
+                                        "main_text": "string",
+                                        "reports": [
+                                            {
+                                                "event_date": "string",
+                                                "locations": [
+                                                    {
+                                                        "country": "string",
+                                                        "location": "string"
+                                                    }
+                                                ],
+                                                "diseases": [ "string" ],
+                                                "syndromes": [ "string" ]
+                                            }
+                                        ]
+                                    }
+                                ],
+                                "log": {
+                                    "provider_name": "API-demic",
+                                    "accessed_time": "string",
+                                    "amount_of_articles": "string",
+                                    "response_time": "string"
+                                }
+                            }
+
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Date Input",
+                        "examples": {
+                            "application/json":
+                            {
+                                "status": 400,
+                                "message": "Invalid Query Search Term: On Args",
+                                "search_list": [
+                                    { "term": "Outbreak" },
+                                    { "term": "Infection" },
+                                    { "term": "Fever" },
+                                    { "term": "Virus" },
+                                    { "term": "Epidemic" },
+                                    { "term": "Pandemic" },
+                                    { "term": "Infectious" },
+                                    { "term": "Illness" },
+                                    { "term": "Bacteria" },
+                                    { "term": "Emerging" },
+                                    { "term": "Unknown" },
+                                    { "term": "virus" },
+                                    { "term": "Mysterious" },
+                                    { "term": "disease" },
+                                    { "term": "Zika" },
+                                    { "term": "MERS" },
+                                    { "term": "Salmonella" },
+                                    { "term": "Legionnaire" },
+                                    { "term": "Measles" },
+                                    { "term": "Anthrax" },
+                                    { "term": "Botulism" },
+                                    { "term": "Plague" },
+                                    { "term": "Smallpox" },
+                                    { "term": "and" },
+                                    { "term": "other" },
+                                    { "term": "related" },
+                                    { "term": "pox" },
+                                    { "term": "viruses" },
+                                    { "term": "Tularemia" },
+                                    { "term": "Junin" },
+                                    { "term": "Fever" },
+                                    { "term": "Machupo" },
+                                    { "term": "Fever" },
+                                    { "term": "Guanarito" },
+                                    { "term": "Fever" },
+                                    { "term": "Chapare" },
+                                    { "term": "Fever" },
+                                    { "term": "Lassa" },
+                                    { "term": "Fever" },
+                                    { "term": "Lujo" },
+                                    { "term": "Fever" },
+                                    { "term": "Hantavirus" },
+                                    { "term": "Rift" },
+                                    { "term": "Valley" },
+                                    { "term": "Fever" },
+                                    { "term": "Crimean" },
+                                    { "term": "Congo" },
+                                    { "term": "Hemorrhagic" },
+                                    { "term": "Fever" },
+                                    { "term": "Dengue" },
+                                    { "term": "Ebola" },
+                                    { "term": "Marburg" },
+                                    { "term": "coronavirus" },
+                                    { "term": "covid19" }
+                                ]
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No Results from API call",
+                        "examples": {
+                            "application/json":
+                            {
+                                "status": 404,
+                                "message": "No result for query",
+                                "search_list": [
+                                    { "term": "Outbreak" },
+                                    { "term": "Infection" },
+                                    { "term": "Fever" },
+                                    { "term": "Virus" },
+                                    { "term": "Epidemic" },
+                                    { "term": "Pandemic" },
+                                    { "term": "Infectious" },
+                                    { "term": "Illness" },
+                                    { "term": "Bacteria" },
+                                    { "term": "Emerging" },
+                                    { "term": "Unknown" },
+                                    { "term": "virus" },
+                                    { "term": "Mysterious" },
+                                    { "term": "disease" },
+                                    { "term": "Zika" },
+                                    { "term": "MERS" },
+                                    { "term": "Salmonella" },
+                                    { "term": "Legionnaire" },
+                                    { "term": "Measles" },
+                                    { "term": "Anthrax" },
+                                    { "term": "Botulism" },
+                                    { "term": "Plague" },
+                                    { "term": "Smallpox" },
+                                    { "term": "and" },
+                                    { "term": "other" },
+                                    { "term": "related" },
+                                    { "term": "pox" },
+                                    { "term": "viruses" },
+                                    { "term": "Tularemia" },
+                                    { "term": "Junin" },
+                                    { "term": "Fever" },
+                                    { "term": "Machupo" },
+                                    { "term": "Fever" },
+                                    { "term": "Guanarito" },
+                                    { "term": "Fever" },
+                                    { "term": "Chapare" },
+                                    { "term": "Fever" },
+                                    { "term": "Lassa" },
+                                    { "term": "Fever" },
+                                    { "term": "Lujo" },
+                                    { "term": "Fever" },
+                                    { "term": "Hantavirus" },
+                                    { "term": "Rift" },
+                                    { "term": "Valley" },
+                                    { "term": "Fever" },
+                                    { "term": "Crimean" },
+                                    { "term": "Congo" },
+                                    { "term": "Hemorrhagic" },
+                                    { "term": "Fever" },
+                                    { "term": "Dengue" },
+                                    { "term": "Ebola" },
+                                    { "term": "Marburg" },
+                                    { "term": "coronavirus" },
+                                    { "term": "covid19" }
+                                ]
+                            }
+                        }
+                    }
+                }
+            },
+        },
     },
 
     "definitions": {
